--- a/departments/pie/home.html
+++ b/departments/pie/home.html
@@ -213,8 +213,8 @@
                         <p>This Department is equipped with modern machinery i.e. CNC machines and provides balanced exposure theoretical as well as practical to the students enabling them to take any challenge of 21st century. 
                         </p>
                        <div>
-                        <img src="../../assets/images/faculty/jasvinder.jpg" alt="photo" srcset="">
-                        <figcaption>Er. Jasvinder Singh <br/> Head of Deptt.</figcaption>
+                        <img src="../../assets/images/faculty/rupinder.jpg" alt="photo" srcset="">
+                        <figcaption>Dr. Rupinder Singh Chahal <br/> Officer In-Charge</figcaption>
                        </div>
                       </div>
 
