--- a/departments/applied/faculty.html
+++ b/departments/applied/faculty.html
@@ -234,7 +234,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="flip-card">
+                         <!-- <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
                                 <img src="../../assets/images/faculty/amarjit.jpg" alt="Avatar">
@@ -262,7 +262,7 @@
                                 </div>
                               </div>
                             </div>
-                          </div>
+                          </div>-->
                           <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
@@ -292,8 +292,7 @@
                               </div>
                             </div>
                           </div>
-                        </div>
-                        <div class="faculty-profile">
+                        
 
                           <div class="flip-card">
                             <div class="flip-card-inner">
@@ -324,6 +323,8 @@
                               </div>
                             </div>
                           </div>
+                       </div>
+                        <div class="faculty-profile">
                           <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
@@ -383,8 +384,6 @@
                             </div>
                           </div>
         
-                        </div>
-                        <div class="faculty-profile">
                             <div class="flip-card">
                                 <div class="flip-card-inner">
                                   <div class="flip-card-front">
