--- a/departments/ece/faculty.html
+++ b/departments/ece/faculty.html
@@ -234,7 +234,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="flip-card">
+                         <!-- <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
                                 <img src="../../assets/images/faculty/darshan.jpg" alt="Avatar">
@@ -263,7 +263,7 @@
                                 </div>
                               </div>
                             </div>
-                          </div>
+                          </div>!-->
                           <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
