--- a/departments/ece/contact.html
+++ b/departments/ece/contact.html
@@ -206,18 +206,18 @@
                    <div class="contact-dept">
                     <div class="contact-info">
                         <p>
-                            <h5>Er. Sukhwinder Partap Rana </h5> <br>
+                            <h5>Er. Manjit Singh Bhullar </h5> <br>
                             Head of Department
                             <br/>
-                            Mob: 95011-00063
+                            Mob: 95011-08199
                             <br/>
-                           Email: <a href="mailto:sukhwinder.partap@punjab.gov.in
-                               ">sukhwinder.partap@punjab.gov.in
+                           Email: <a href="mailto:manjitsingh.bhullar@punjab.gov.in
+                               ">manjitsingh.bhullar@punjab.gov.in
                         </a>
                            </p>
         
                        </div>
-                       <div class="contact-info">
+                       <!--<div class="contact-info">
                         <p>
                             <h5>Er. Darshan Singh Dhillon </h5> <br>
                             Sr. Lecturer
@@ -227,7 +227,7 @@
                            Email: <a href="mailto:darshansingh.dhillon@punjab.gov.in">darshansingh.dhillon@punjab.gov.in</a>
                            </p>
         
-                       </div>
+                       </div>!-->
                        <div class="contact-info">
                         <p>
                             <h5>Er. Jagdeep Kaur Rai </h5> <br>
