--- a/academics_admissions/academic_calendar.html
+++ b/academics_admissions/academic_calendar.html
@@ -194,6 +194,11 @@
                 <div class="down-content">
                    
                      <h4 class="block-dept">Academic Calender</h4>
+
+                    <p> 
+                      <img style="height: 30px;width:30px;" src="../assets/images/pdfnotification.svg" alt="" srcset="">
+                      <a href="../assets/files/Academic-Cal_Jan23.PDF" target="_blank">Academic Calender For 2022-23 (Even Semester)-Updated</a> 
+                  </p>
                      <p> 
                       <img style="height: 30px;width:30px;" src="../assets/images/pdfnotification.svg" alt="" srcset="">
                       <a href="../assets/files/Academic-Cal-2022-23.PDF" target="_blank">Academic Calender For 2022-23 (Odd Semester)-Updated</a> 
