--- a/departments/ce/contact.html
+++ b/departments/ce/contact.html
@@ -223,7 +223,7 @@
                            </p>
         
                        </div>
-                       <div class="contact-info">
+                       <!--<div class="contact-info">
                         <p>
                             <h5>Er. Sarabjeet Kaur </h5> <br>
                             Head of Department
@@ -233,7 +233,7 @@
                            Email: <a href="mailto:sarabjit.kaur73@punjab.gov.in">sarabjit.kaur73@punjab.gov.in</a>
                            </p>
         
-                       </div>
+                       </div>-->
                        <div class="contact-info">
                         <p>
                             <h5>Er. Punit Gupta </h5> <br>
