--- a/departments/pie/home.html
+++ b/departments/pie/home.html
@@ -181,7 +181,7 @@
         <div class="col-lg-12">
             
           <!-- <h6>Get all details</h6> -->
-          <h2>Department of Production & Industrial Training</h2>
+          <h2>Department of Production & Industrial Engineering</h2>
         </div>
       </div>
     </div>
