--- a/departments/applied/faculty.html
+++ b/departments/applied/faculty.html
@@ -358,7 +358,7 @@
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
                                 <img src="../../assets/images/faculty/namita.jpeg" alt="Avatar">
-                                <h3>Dr. Namita Bansal</h3>
+                                <h3>Ms. Namita Bansal</h3>
                                 <h5 style="color:white;">Lecturer Physics</h5>
                               </div>
                               <div class="flip-card-back">
@@ -366,7 +366,7 @@
                                     <h3>
                                         Qualification
                                     </h3><br/>
-                                    <h5 style="color:white;">PhD,M.Sc.,NET</h5>
+                                    <h5 style="color:white;">M.Sc.,NET</h5>
                                 </div>
                                 <div class="specialization-area">
                                     <h3>
