--- a/library.html
+++ b/library.html
@@ -142,6 +142,21 @@
                       </p>
                 </div>
               </div>
+
+<div class="contact-dept">
+  
+  <div class="contact-info">
+                        <p>
+                            <h5>Er. Harcharan Singh </h5> <br>
+                            Lecturer
+                            <br/>
+                            Mob: 75892-13339
+                            <br/>
+                           Email: <a href="mailto:harcharan.singh93@punjab.gov.in">harcharan.singh93@punjab.gov.in</a>
+                           </p>
+        
+                       </div>
+    </div>
     </div>
     
     <div class="footer">
