--- a/library.html
+++ b/library.html
@@ -147,12 +147,12 @@
   
   <div class="contact-info">
                         <p>
-                            <h5>Er. Harcharan Singh </h5> <br>
+                            <h5>Mr. Harpreet Singh </h5> <br>
                             Lecturer
                             <br/>
-                            Mob: 75892-13339
+                            Mob: 97817-67275
                             <br/>
-                           Email: <a href="mailto:harcharan.singh93@punjab.gov.in">harcharan.singh93@punjab.gov.in</a>
+                           Email: <a href="mailto:hp.singh1989@punjab.gov.in">hp.singh1989@punjab.gov.in</a>
                            </p>
         
                        </div>
