--- a/help_desk/icc.html
+++ b/help_desk/icc.html
@@ -242,13 +242,7 @@
                         </tr>
 
 
-                        <tr>
-                            <td>3.</td>
-                            <td>Ms. Sarabjeet Kaur</td>
-                            <td>Sr. Lect.</td>
-                            <td>Member</td>
-                            <td><a href="mailto:sarabjit.kaur73@punjab.gov.in">sarabjit.kaur73@punjab.gov.in</a></td>
-                            </tr>
+                       
 
                             <tr>
                                 <td>4.</td>
@@ -257,6 +251,13 @@
                                 <td>Member</td>
                                 <td><a href="mailto:archana.singla6@punjab.gov.in">archana.singla6@punjab.gov.in</a></td>
                                 </tr>
+ <tr>
+                            <td>3.</td>
+                            <td>Ms. Deepti</td>
+                            <td>Lecturer</td>
+                            <td>Member</td>
+                            <td><a href="mailto:deepti.911@punjab.gov.in">deepti.911@punjab.gov.in</a></td>
+                            </tr>
 
                                 <tr>
                                     <td>5.</td>
