--- a/index.html
+++ b/index.html
@@ -220,7 +220,12 @@ https://templatemo.com/tm-569-edu-meeting
                     </div>
                     <marquee style="margin-bottom: 10px;" behavior="scroll" direction="up" scrollamount="2">
                     <ol>
-                     <li>
+                    <li>
+                      <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/letter-APF-May2023.PDF" target="_blank">
+                          Regarding End Semester Examination May 2023
+                        </a>
+                      </li>
+                     <!--<li>
                          <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/direct_pharmacy_2022.pdf" target="_blank">
                           Direct Counseling (Diploma in Pharmacy)- Admissions 2022-23
                         </a>
@@ -229,16 +234,16 @@ https://templatemo.com/tm-569-edu-meeting
                          <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/direct_counselling_2022.pdf" target="_blank">
                           Direct Counseling (Engineering Courses)- Admissions 2022-23
                         </a>
-                      </li>
+                      </li>-->
                       <li>
-                        <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/Academic-Calendar_2022-23.PDF" target="_blank">Revised Academic Calendar (First Semester)</a>
+                        <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/Academic-Cal_Jan23.PDF" target="_blank">Academic Calendar (Even Semester) 2022-23</a>
                       </li>
                       
-                      <li>
+                      <!--<li>
                         <img src="assets/images/news.gif" alt="" class="new-news"><a href="http://www.punjabteched.com/" target="_blank">
                           Admissions 2022-23
                         </a>
-                      </li>
+                      </li>-->
                      
                       <li>
                         <img src="assets/images/news.gif" alt="" class="new-news"><a href="http://www.pgrkam.com/" target="_blank">
@@ -424,10 +429,10 @@ https://templatemo.com/tm-569-edu-meeting
                       padding-bottom:15px; padding-top: 15px; border-bottom:1px solid gray">
                         <a href="sub_header/citizen_charter.html" style="font-size:18px;">⮕ Citizen Charter and RTI</a>
                       </p>
-                      <p style="margin: auto;
+                     <!-- <p style="margin: auto;
                       padding-bottom:15px; padding-top: 15px; border-bottom:1px solid gray">
                         <a href="help_desk/student_counsellor.html" style="font-size:18px;">⮕ Student Counsellor</a>
-                      </p>
+                      </p>-->
                       <p style="margin: auto;padding-top: 15px; 
                       padding-bottom:10px;">
                         <a href="help_desk/student_counsellor.html" style="font-size:18px;">⮕ College Help Line (0164-2246394) <br>
@@ -725,19 +730,19 @@ https://templatemo.com/tm-569-edu-meeting
           <div class="row">
             <div class="col-lg-12">
               <div class="item">
-                <h3>APPLY FOR Diploma In Engg. Trades</h3>
-                <p>Apply for Diploma Program at Government Polytechnic College, Bathinda</p>
+                <h3>Admission for Diploma In Engg. & Architecture Trades</h3>
+                <p>Admissions for Session 2023-24 for Diploma in Engg. & Architecture Program at Government Polytechnic College, Bathinda will be made through Punjab State Board of Technical Education.</p>
                 <div class="main-button-red">
-                  <div class="scroll-to-section"><a target="_blank" href="https://eakadamik.in/psbte_2022/">Apply Now</a></div>
+                  <div class="scroll-to-section"><a target="_blank" href="http://www.punjabteched.com/">Keep Visiting/a></div>
               </div>
               </div>
             </div>
             <div class="col-lg-12">
               <div class="item">
-                <h3>APPLY FOR D. Pharmacy</h3>
-                <p>Apply for Diploma Program at Government Polytechnic College, Bathinda.</p>
+                <h3>Admission for D. Pharmacy</h3>
+                <p>Admissions for Session 2023-24 for Diploma in Pharmacy Program at Government Polytechnic College, Bathinda will be made through Punjab State Board of Technical Education.</p>
                 <div class="main-button-yellow">
-                  <div class="scroll-to-section"><a target="_blank" href="https://eakadamik.in/psbte_2022/">Apply Now</a></div>
+                  <div class="scroll-to-section"><a target="_blank" href="http://www.punjabteched.com/">Keep Visiting/a></div>
               </div>
               </div>
             </div>
