--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@ https://templatemo.com/tm-569-edu-meeting
               
             </div>
           </div>
-          <!-- <div class="col-lg-5">
+          <div class="col-lg-5">
             <div class="row">
               <div class="col-lg-12">
                 <div class="meeting-item">
@@ -694,11 +694,11 @@ https://templatemo.com/tm-569-edu-meeting
                       <p style="margin: auto;
                       padding-bottom:15px; padding-top: 15px; border-bottom:1px solid gray">
                         <a href="sub_header/citizen_charter.html" style="font-size:18px;">⮕ Citizen Charter and RTI</a>
-                      </p>
+                      </p><!--
                       <p style="margin: auto;
                       padding-bottom:15px; padding-top: 15px; border-bottom:1px solid gray">
                         <a href="help_desk/student_counsellor.html" style="font-size:18px;">⮕ Student Counsellor</a>
-                      </p>
+                      </p>-->
                       <p style="margin: auto;padding-top: 15px; 
                       padding-bottom:10px;">
                         <a href="help_desk/student_counsellor.html" style="font-size:18px;">⮕ College Help Line (0164-2246394) <br>
@@ -711,7 +711,7 @@ https://templatemo.com/tm-569-edu-meeting
                 </div>
               </div>
             </div>
-          </div> -->
+          </div>
         </div>
       </div>
       </section>
@@ -733,7 +733,7 @@ https://templatemo.com/tm-569-edu-meeting
                 <h3>Admission for Diploma In Engg. & Architecture Trades</h3>
                 <p>Admissions for Session 2023-24 for Diploma in Engg. & Architecture Program at Government Polytechnic College, Bathinda will be made through Punjab State Board of Technical Education.</p>
                 <div class="main-button-red">
-                  <div class="scroll-to-section"><a target="_blank" href="http://www.punjabteched.com/">Keep Visiting/a></div>
+                  <div class="scroll-to-section"><a target="_blank" href="http://www.punjabteched.com/">Keep Visiting</a></div>
               </div>
               </div>
             </div>
@@ -742,7 +742,7 @@ https://templatemo.com/tm-569-edu-meeting
                 <h3>Admission for D. Pharmacy</h3>
                 <p>Admissions for Session 2023-24 for Diploma in Pharmacy Program at Government Polytechnic College, Bathinda will be made through Punjab State Board of Technical Education.</p>
                 <div class="main-button-yellow">
-                  <div class="scroll-to-section"><a target="_blank" href="http://www.punjabteched.com/">Keep Visiting/a></div>
+                  <div class="scroll-to-section"><a target="_blank" href="http://www.punjabteched.com/">Keep Visiting</a></div>
               </div>
               </div>
             </div>
