--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@ https://templatemo.com/tm-569-edu-meeting
             </div>
           </div>
           <div class="col-lg-5">
-            <div class="row">
+            <!--<div class="row">
               <div class="col-lg-12">
                 <div class="meeting-item">
                   <div class="title-heading" style="font-weight: bold;">
@@ -710,7 +710,7 @@ https://templatemo.com/tm-569-edu-meeting
                   </div>
                 </div>
               </div>
-            </div>
+            </div>-->
           </div>
         </div>
       </div>
