--- a/help_desk/scst.html
+++ b/help_desk/scst.html
@@ -233,32 +233,26 @@
                     </tr>
 
 
-                        <tr>
-                            <td>2.</td>
-                            <td>Ms. Sarabjeet Kaur</td>
-                            <td>HOD</td>
-                            <td>Member</td>
-                            <td><a href="mailto:sarabjit.kaur73@punjab.gov.in">sarabjit.kaur73@punjab.gov.in</a></td>
-                            </tr>
+                       
 
                             <tr>
-                                <td>3.</td>
-                                <td>Mr. Darshan Singh Dhillon</td>
-                                <td>Sr. Lect.</td>
-                                <td>Member</td>
-                                <td><a href="mailto:darshansingh.dhillon@punjab.gov.in">darshansingh.dhillon@punjab.gov.in</a></td>
-                                </tr>
-
-                            <tr>
-                                <td>4.</td>
+                                <td>2.</td>
                                 <td>Ms. Gurpreet Kaur</td>
                                 <td>Lecturer</td>
                                 <td>Member</td>
-                                <td><a href="mailto:archana.singla6@punjab.gov.in">archana.singla6@punjab.gov.in</a></td>
+                                <td><a href="mailto:GURPREETKAUR2091@GMAIL.COM">gurpreetkaur2091@gmail.com</a></td>
                                 </tr>
 
                                 <tr>
-                                    <td>5.</td>
+                                  <td>3.</td>
+                                  <td>Ms. Garima Rani</td>
+                                  <td>Lecturer</td>
+                                  <td>Member</td>
+                                  <td><a href="mailto:garima.rani93@punjab.gov.in">garima.rani93@punjab.gov.in</a></td>
+                                  </tr>
+
+                                <tr>
+                                    <td>4.</td>
                                     <td>Mr. Junaid Niazi</td>
                                     <td>Lecturer</td>
                                     <td>Member</td>
