--- a/index.html
+++ b/index.html
@@ -220,6 +220,11 @@ https://templatemo.com/tm-569-edu-meeting
                     </div>
                     <marquee style="margin-bottom: 10px;" behavior="scroll" direction="up" scrollamount="2">
                     <ol>
+                      <li>
+                        <img src="assets/images/news.gif" alt="" class="new-news"><a href="https://forms.gle/srv9j81v1mLuXVwj6" target="_blank">
+                            Inquiry Performa for Admissions 2023-24
+                          </a>
+                        </li>
                     <li>
                       <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/letter-APF-May2023.PDF" target="_blank">
                           Regarding End Semester Examination May 2023
