added manwinder and mittal

--- a/departments/applied/faculty.html
+++ b/departments/applied/faculty.html
@@ -266,6 +266,35 @@
                           <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
+                                <img src="../../assets/images/faculty/rakesh_mittal.jpeg" alt="Avatar">
+                                <h3>Mr. Rakesh Mittal</h3>
+                                <h5 style="color:white;">Sr. Lect. Mathematics</h5>
+                              </div>
+                              <div class="flip-card-back">
+                                <div class="qualification">
+                                    <h3>
+                                        Qualification
+                                    </h3><br/>
+                                    <h5 style="color:white;">M.Sc.(Gold Medalist)</h5>
+                                </div>
+                                <div class="specialization-area">
+                                    <h3>
+                                        Specialization Area
+                                    </h3><br/>
+                                    <h5 style="color:white;">Applied Mathematics</h5>
+                                </div>
+                                <div class="contact">
+                                    <a href="mailto:rakesh.mittal58@punjab.gov.in">
+                                        <img src="../../assets/images/email.svg" alt="" 
+                                        srcset="">
+                                    </a>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="flip-card">
+                            <div class="flip-card-inner">
+                              <div class="flip-card-front">
                                 <img src="../../assets/images/faculty/asha.jpg" alt="Avatar">
                                 <h3>Ms. Asha Rani</h3>
                                 <h5 style="color:white;">Lecturer Mathematics</h5>
@@ -294,6 +323,9 @@
                           </div>
                         
 
+                          
+                       </div>
+                        <div class="faculty-profile">
                           <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
@@ -323,8 +355,6 @@
                               </div>
                             </div>
                           </div>
-                       </div>
-                        <div class="faculty-profile">
                           <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
