--- a/departments/ce/faculty.html
+++ b/departments/ce/faculty.html
@@ -240,6 +240,36 @@
                               </div>
                             </div>
                           </div>
+                          <div class="flip-card">
+                            <div class="flip-card-inner">
+                              <div class="flip-card-front">
+                                <img src="../../assets/images/faculty/manwinder_singh.jpeg" alt="Avatar">
+                                <h3>Er. Manwinder Singh</h3>
+                                <h5 style="color:white;">Sr. Lecturer</h5>
+                              </div>
+                              <div class="flip-card-back">
+                                <div class="qualification">
+                                    <h3>
+                                        Qualification
+                                    </h3><br/>
+                                    <h5 style="color:white;">B.Tech.<br/>
+                                    M.Tech., M.B.A.</h5>
+                                </div>
+                                <div class="specialization-area">
+                                    <h3>
+                                        Specialization Area
+                                    </h3><br/>
+                                    <h5 style="color:white;">Quality of underground water</h5>
+                                </div>
+                                <div class="contact">
+                                    <a href="mailto:manwinder.singh1968@punjab.gov.in">
+                                        <img src="../../assets/images/email.svg" alt="" 
+                                        srcset="">
+                                    </a>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
                           <!-- <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
@@ -300,39 +330,39 @@
                               </div>
                             </div>
                           </div>
-                          <div class="flip-card">
-                            <div class="flip-card-inner">
-                              <div class="flip-card-front">
-                                <img src="../../assets/images/faculty/jaspreet.jpg" alt="Avatar">
-                                <h3>Er. Jaspreet Singh</h3>
-                                <h5 style="color:white;">Lecturer</h5>
-                              </div>
-                              <div class="flip-card-back">
-                                <div class="qualification">
-                                    <h3>
-                                        Qualification
-                                    </h3><br/>
-                                    <h5 style="color:white;">B.Tech.<br/>
-                                    M.Tech.</h5>
-                                </div>
-                                <div class="specialization-area">
-                                    <h3>
-                                        Specialization Area
-                                    </h3><br/>
-                                    <h5 style="color:white;">CONSTRUCTION TECHNOLOGY AND MANAGEMENT</h5>
-                                </div>
-                                <div class="contact">
-                                    <a href="mailto:jaspreet.singh11@punjab.gov.in">
-                                        <img src="../../assets/images/email.svg" alt="" 
-                                        srcset="">
-                                    </a>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
+                          
                     </div>
                     <div class="faculty-profile">
-                        
+                      <div class="flip-card">
+                        <div class="flip-card-inner">
+                          <div class="flip-card-front">
+                            <img src="../../assets/images/faculty/jaspreet.jpg" alt="Avatar">
+                            <h3>Er. Jaspreet Singh</h3>
+                            <h5 style="color:white;">Lecturer</h5>
+                          </div>
+                          <div class="flip-card-back">
+                            <div class="qualification">
+                                <h3>
+                                    Qualification
+                                </h3><br/>
+                                <h5 style="color:white;">B.Tech.<br/>
+                                M.Tech.</h5>
+                            </div>
+                            <div class="specialization-area">
+                                <h3>
+                                    Specialization Area
+                                </h3><br/>
+                                <h5 style="color:white;">CONSTRUCTION TECHNOLOGY AND MANAGEMENT</h5>
+                            </div>
+                            <div class="contact">
+                                <a href="mailto:jaspreet.singh11@punjab.gov.in">
+                                    <img src="../../assets/images/email.svg" alt="" 
+                                    srcset="">
+                                </a>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                           <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
