--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ https://templatemo.com/tm-569-edu-meeting
                     <ol>
                       <li>
                         <img src="assets/images/news.gif" alt="" class="new-news"><a href="https://forms.gle/srv9j81v1mLuXVwj6" target="_blank">
-                            Inquiry Performa for Admissions 2023-24
+                            Enquiry Proforma for Admissions 2023-24
                           </a>
                         </li>
                     <li>
@@ -230,6 +230,16 @@ https://templatemo.com/tm-569-edu-meeting
                           Regarding End Semester Examination May 2023
                         </a>
                       </li>
+                      <li>
+                        <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/src_activity_even_sem_23.pdf" target="_blank">
+                            SRC Activity News Letter Even Semester (2022-23)
+                          </a>
+                        </li>
+                        <li>
+                          <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/src_activity_odd_sem_22.pdf" target="_blank">
+                            SRC Activity News Letter Odd Semester (2022-23)
+                            </a>
+                          </li>
                      <!--<li>
                          <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/direct_pharmacy_2022.pdf" target="_blank">
                           Direct Counseling (Diploma in Pharmacy)- Admissions 2022-23
