anti discrimination cell

--- a/help_desk/scst.html
+++ b/help_desk/scst.html
@@ -232,11 +232,17 @@
                     <td><a href="mailto:narinder.kaur71@punjab.gov.in">narinder.kaur71@punjab.gov.in</a></td>
                     </tr>
 
-
+                    <tr>
+                      <td>2.</td>
+                      <td>Ms. Deep Shikha</td>
+                      <td>Sr. Lecturer</td>
+                      <td>Member</td>
+                      <td><a href="mailto:deepshikha.74@punjab.gov.in">deepshikha.74@punjab.gov.in</a></td>
+                      </tr>
                        
 
                             <tr>
-                                <td>2.</td>
+                                <td>3.</td>
                                 <td>Ms. Gurpreet Kaur</td>
                                 <td>Lecturer</td>
                                 <td>Member</td>
@@ -244,7 +250,7 @@
                                 </tr>
 
                                 <tr>
-                                  <td>3.</td>
+                                  <td>4.</td>
                                   <td>Ms. Garima Rani</td>
                                   <td>Lecturer</td>
                                   <td>Member</td>
@@ -252,7 +258,7 @@
                                   </tr>
 
                                 <tr>
-                                    <td>4.</td>
+                                    <td>5.</td>
                                     <td>Mr. Junaid Niazi</td>
                                     <td>Lecturer</td>
                                     <td>Member</td>
