--- a/affiliations/aicte/home.html
+++ b/affiliations/aicte/home.html
@@ -197,7 +197,7 @@
                   </div> -->
                 </div>
                 <div class="down-content">
-                  <h4>AICTE EoA For Last 5 years</h4>
+                  <h4>AICTE EoA</h4>
                   <p> <img style="height: 30px;width:30px;" src="../../assets/images/pdfnotification.svg" alt="" srcset="">
                   <a href="../../assets/files/eoa2022.pdf" target="_blank">EOA 2022-23 Approval Letter </a> </p><br/>
                   <p> <img style="height: 30px;width:30px;" src="../../assets/images/pdfnotification.svg" alt="" srcset="">
