--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@ https://templatemo.com/tm-569-edu-meeting
                           <li><a href="https://scholarships.punjab.gov.in/" target="_blank">Scholarship Portal (Govt. of Punjab)</a></li>
                           <li><a href="https://connect.punjab.gov.in/">Punjab Grievance Redressal Portal</a></li>
                           <li><a href="help_desk/icc.html">Internal Complaint Committee</a></li>
+                          <li><a href="help_desk/aicte_feedback.html">AICTE Feedback Facility</a></li>
                           <li><a href="help_desk/scst.html">Anti-discrimination cell</a></li>
                         </ul>
                           </li>
